# Quick-Log

./: CMakeLists.txt  main.cpp
